--- a/container/images/templates/conf/executor.yaml
+++ b/container/images/templates/conf/executor.yaml
@@ -9,5 +9,6 @@ server:
 store:
     dbPath: /opt/dingo/executor/raftDb
     raft:
+       port: 9191 
        raftPath: /opt/dingo/executor/raftLog
     collectStatsInterval: 5
