[dingo] update logback configuration about driver and sqlline

--- a/roles/dingo/tasks/02_update_configuration.yml
+++ b/roles/dingo/tasks/02_update_configuration.yml
@@ -21,12 +21,12 @@
       dest: "{{ dingo_home }}/conf/logback-executor.xml"
     }
     - {
-      src: "log4j-sqlline.properties.j2",
-      dest: "{{ dingo_home }}/conf/log4j-sqlline.properties"
+      src: "logback-sqlline.xml.j2",
+      dest: "{{ dingo_home }}/conf/logback-sqlline.xml"
     }
     - {
-      src: "log4j-driver.properties.j2",
-      dest: "{{ dingo_home }}/conf/log4j-driver.properties"
+      src: "logback-driver.xml.j2",
+      dest: "{{ dingo_home }}/conf/logback-driver.xml"
     }
     - {
       src: "logback-web.xml.j2",
