--- a/artifacts/config.yml
+++ b/artifacts/config.yml
@@ -8,3 +8,4 @@ artifacts:
   - {name: "prometheus_local_file", path_in_repo: "prometheus-2.14.0.linux-amd64.tar.gz" }
   - {name: "grafana_local_file", path_in_repo: "grafana-7.3.1.linux-amd64.tar.gz"}
   - {name: "node_exporter_local_file", path_in_repo: "node_exporter-0.18.1.linux-amd64.tar.gz"}
+  - {name: "process_exporter_local_file", path_in_repo: "process-exporter-0.6.0.linux-amd64.tar.gz"}
