--- a/playbook.yml
+++ b/playbook.yml
@@ -48,4 +48,10 @@
   tasks:
     - include_role: name=node_exporter
       when: install_node_exporter
+      
+ - hosts:
+    - all_nodes
+  tasks:
+    - include_role: name=process_exporter
+      when: install_process_exporter
 
