--- a/roles/dingo/defaults/main.yml
+++ b/roles/dingo/defaults/main.yml
@@ -5,6 +5,8 @@ dingo_home: "{{ installer_root_path | default('/opt') }}/dingo"
 dingo_log_path: "{{ dingo_log_dir }}/dingo"
 dingo_data_path: "{{ dingo_data_dir }}/dingo"
 
+root_log_level: error
+
 installer_cache_path: /tmp
 delete_cache_after_install: true
 
