--- a/roles/process_exporter/files/process_name.yaml
+++ b/roles/process_exporter/files/process_name.yaml
@@ -3,10 +3,14 @@ process_names:
 #    cmdline:
 #    - '.+'
 
-  - name: "{{.Matches}}"
+  - name: "{{.ExeFull}}"
     cmdline:
-    - 'coordinator'
+    - 'dingodb_server'
 
-  - name: "{{.Matches}}"
+  - name: prometheus
     cmdline:
-    - 'store'
+    - 'prometheus'
+
+  - name: grafana
+    cmdline:
+    - 'grafana'
