--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -16,7 +16,7 @@ dingo_group: root
 #-----------------------------------------------------
 # 1. Update System Configuration about OS
 #-----------------------------------------------------
-install_system: false
+install_system: true
 install_system_basicTools: true
 install_system_fileLimits: true
 
@@ -30,25 +30,34 @@ jdk_home: "{{ jdk_install_path }}/jdk"
 #-----------------------------------------------------
 # 3. Install Dingo to Dingo home
 #-----------------------------------------------------
-install_dingo: true
+install_dingo: false
 install_dingo_basic_command: true
 install_dingo_update_configuration: true
 install_dingo_start_roles: true
 
 #-----------------------------------------------------
-# 4. Install Prometheus to Dingo directory
+# 4.Install Dingo-store to Dingo home
 #-----------------------------------------------------
-install_prometheus: false
+install_dingo_store: true
+install_dingo_store_basic_command: true
+install_dingo_store_update_configuration: true
+install_dingo_store_start_roles: true
+
+
+#-----------------------------------------------------
+# 5. Install Prometheus to Dingo directory
+#-----------------------------------------------------
+install_prometheus: true
 blackbox_exporter_port: 19115
 blackbox_exporter_server: "{{ prometheus_server }}"
 
 # Node Exporter
-install_node_exporter: false
+install_node_exporter: true
 node_exporter_port: 19100
 node_exporter_servers: "{{ groups['node_exporter'] }}"
 
 # Process Exporter
-install_process_exporter: false
+install_process_exporter: true
 process_exporter_port: 19256
 process_exporter_servers: "{{ groups['process_exporter'] }}"
 
@@ -62,21 +71,21 @@ pushgateway_port: 19091
 pushgateway_server: "{{ prometheus_server }}"
 
 # Grafana
-install_grafana: false
+install_grafana: true
 grafana_port: 3000
 grafana_server: "{{ groups['grafana'][0] }}"
 default_dashboard_uid: "RNezu0fWk"
 
 dingo_tmp_coordinator_list: "{{ groups['coordinator'] }}"
-dingo_tmp_executor_list: "{{ groups['executor'] }}"
+dingo_tmp_executor_list: "{{ groups['executor'] | default(\"\") }}"
 
 # define dingo coordinator http monitor port: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
 dingo_coordinator_http_monitor_port: 9201
-dingo_executor_http_monitor_port: 9202
+dingo_executor_http_monitor_port: 9201
 
 # ['172.20.31.10:9201','172.20.31.11:9201','172.20.31.12:9201']
 dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_coordinator_http_monitor_port }}' {% endfor %}"
-dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") }} ]"
+dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
 
 dingo_executor_http_tmp_list: "{% for item in dingo_tmp_executor_list %} '{{item}}:{{ dingo_executor_http_monitor_port }}' {% endfor %}"
-dingo_executor_http_monitor_list: "[ {{ dingo_executor_http_tmp_list.split() | join(\",\") }} ]"
+dingo_executor_http_monitor_list: "[ {{ dingo_executor_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
