[chore][deploy] Fix dingo-0.6.0 user; Core file; grafana templates

--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -19,6 +19,7 @@ dingo_group: root
 install_system: true
 install_system_basicTools: true
 install_system_fileLimits: true
+set_core_file: false
 
 #-----------------------------------------------------
 # 2. Install Java SDK
