--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -21,3 +21,7 @@ grafana_admin_password: "admin"
 default_dashboard_title: "Dingo"
 default_dashboard_uid: "RNezu0fWk"
 default_dashboard_template: "dingo.json.j2"
+process_dashboard_title: "DingoProcess"
+process_dashboard_uid: "PCJkOyLVk"
+process_dashboard_template: "system-processes-metrics.json.j2"
+# default_dashboard_template: "system-processes-metrics.json.j2"
