--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -18,3 +18,6 @@
 
 - include_tasks: 05_install_basic_tools.yml
   when:  install_system_basicTools
+
+- include_tasks: 06_enable_core_dumps.yml
+  when:  set_core_file
