--- a/roles/dingo_store/tasks/02_update_configuration.yml
+++ b/roles/dingo_store/tasks/02_update_configuration.yml
@@ -1,5 +1,11 @@
 ---
+- name: "set disk_string"
+  set_fact:
+    store_disk_string: "{{ hostvars[inventory_hostname]['disk']  | default(default_disk_list) }}"
 
+- name: "split string into disk list"
+  set_fact:
+    store_disk_list: "{{ store_disk_string.split() }}"
 
 - name: "Generate dingo configuration files"
   template: src={{ item.src }} dest={{ item.dest }} owner={{ dingo_user }} group={{ dingo_group }} mode=0755
@@ -13,4 +19,22 @@
       dest: "{{ dingo_store_home }}/scripts/start-store.sh"
      }
 
-
+- name: "Remove dingo logrotate file if exist"
+  file: path="{{ item }}" state=absent
+  with_items: 
+    - "/etc/logrotate.d/store-logrotate"
+    - "/etc/logrotate.d/coordinator-logrotate"
+  when: open_dingo_store_logrotate == false
+  
+- name: "Generate dingo configuration files logrotate"
+  template: src={{ item.src }} dest={{ item.dest }} owner=root group=root mode=0777
+  with_items:
+     - {
+      src: "store-logrotate.j2",
+      dest: "/etc/logrotate.d/store-logrotate"
+     }
+     - {
+      src: "coordinator-logrotate.j2",
+      dest: "/etc/logrotate.d/coordinator-logrotate"
+     }
+  when: open_dingo_store_logrotate
