--- a/playbook.yml
+++ b/playbook.yml
@@ -19,15 +19,6 @@
       when: install_java_sdk
 
 #---------------------------------
-# 3. Install Dingo nodes
-#---------------------------------
-- hosts:
-    - all_nodes
-  tasks:
-    - include_role: name=dingo
-      when: install_dingo
-
-#---------------------------------
 # 3. Install Dingo_store nodes
 #---------------------------------
 - hosts:
@@ -35,6 +26,16 @@
   tasks:
     - include_role: name=dingo_store
       when: install_dingo_store
+
+#---------------------------------
+# 3. Install Dingo nodes
+#---------------------------------
+- hosts:
+    - executor_nodes
+  tasks:
+    - include_role: name=dingo
+      when: install_dingo
+
 
 #---------------------------------
 # 4. Install prometheus and grafana
