--- a/roles/dingo/defaults/main.yml
+++ b/roles/dingo/defaults/main.yml
@@ -10,36 +10,19 @@ root_log_level: error
 installer_cache_path: /tmp
 delete_cache_after_install: true
 
-dingo_coordinator_exchange_port: 19181
-dingo_coordinator_raft_port: 9181
-dingo_executor_exchange_port: 19191
-dingo_executor_raft_port: 9191
+dingo_coordinator_exchange_port: 22001
+dingo_executor_exchange_port: 8765
 
-dingo_coordinator_meta_path: "{{ dingo_data_path }}/coordinator"
 dingo_executor_server_db_path: "{{ dingo_data_path }}/executor/meta"
 dingo_executor_raft_log_path: "{{ dingo_data_path }}/executor/raftLog"
 dingo_executor_raft_db_path: "{{ dingo_data_path }}/executor/raftDb"
 
-dingo_tmp_coordinator_list: "{{ groups['coordinator'] }}"
+
 dingo_tmp_executor_list: "{{ groups['executor'] }}"
 
-# define dingo coordinator raft connection string: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
-dingo_coordinator_raft_list: "{% for item in dingo_tmp_coordinator_list %} {{item}}:{{ dingo_coordinator_raft_port }} {% endfor %}"
-dingo_coordinator_raft_connection_list: "{{ dingo_coordinator_raft_list.split() | join(\",\") }}"
+# define dingo coordinator exchange connection string: 172.20.3.18:22001
+dingo_coordinator_exchange_connection_list: "{{ inventory_hostname }}:{{ dingo_coordinator_exchange_port }}"
 
-# define dingo coordinator exchange connection string: 172.20.3.18:8080,172.20.3.18:8081,172.20.3.18:8082
-dingo_coordinator_exchange_list: "{% for item in dingo_tmp_coordinator_list %} {{item}}:{{ dingo_coordinator_exchange_port }} {% endfor %}"
-dingo_coordinator_exchange_connection_list: "{{ dingo_coordinator_exchange_list.split() | join(\",\") }}"
-
-# define dingo executor exchange connection string: 172.20.3.18:9000,172.20.3.19:9000,172.20.3.20:9000
-dingo_executor_raft_list: "{% for item in dingo_tmp_executor_list %} {{item}}:{{ dingo_executor_raft_port }} {% endfor %}"
-dingo_executor_raft_connection_list: "{{ dingo_executor_raft_list.split() | join(\",\") }}" 
-
-# define dingo executor exchange connection string: 172.20.3.18:9000,172.20.3.19:9000,172.20.3.20:9000
-dingo_executor_exchange_list: "{% for item in dingo_tmp_executor_list %} {{item}}:{{ dingo_executor_exchange_port }} {% endfor %}"
-dingo_executor_exchange_connection_list: "{{ dingo_executor_exchange_list.split() | join(\",\") }}" 
-
-# define the flag to check current role is coordinator or executor
-is_dingo_coordinator: "{{ 'coordinator' in group_names }}"
+# define the flag to check current role executor
 is_dingo_executor: "{{ 'executor' in group_names }}"
 is_dingo_web: "{{ 'web' in group_names }}"
