--- a/roles/dingo/tasks/03_start_roles_command.yml
+++ b/roles/dingo/tasks/03_start_roles_command.yml
@@ -2,36 +2,25 @@
 
 # stop all the coordinator and executor
 - name: "Stop Coordinator and Executor on all host"
+  become: true
+  become_user: "{{ dingo_user }}"
   shell: "/bin/bash ./bin/stop-all-component.sh"
   args:
     chdir: "{{ dingo_home }}"
 
-# start coordinator
-- name: "Start Coordinator using Script"
-  shell: "/bin/bash ./bin/start-coordinator.sh " 
-  args:
-    chdir: "{{ dingo_home }}"
-  when: is_dingo_coordinator
-
-- name: "Sleep wait coordinator start"
-  shell: "sleep 20"
-
 # start executor
 - name: "Start Executor using Shell Script"
+  become: true
+  become_user: "{{ dingo_user }}"
   shell: "/bin/bash ./bin/start-executor.sh " 
-  args:
-    chdir: "{{ dingo_home }}"
-  when: is_dingo_executor
-
-# start jdbc driver proxy
-- name: "Start JDBC Driver using Shell Script"
-  shell: "/bin/bash ./bin/start-driver.sh" 
   args:
     chdir: "{{ dingo_home }}"
   when: is_dingo_executor
 
 # Start dingo web 
 - name: "Start Dingo Web appliaction using Shell script"
+  become: true
+  become_user: "{{ dingo_user }}"
   shell: "/bin/bash ./bin/start-web.sh"
   args:
     chdir: "{{ dingo_home }}"
