--- a/roles/jdk/tasks/03_config.yml
+++ b/roles/jdk/tasks/03_config.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "Get home directory of user: {{ jdk_user }}"
-  shell: "cat /etc/passwd | grep \"^{{ jdk_user }}:\" | awk -F ':' '{print $6}'"
+  shell: "cat /etc/passwd | grep '{{ jdk_user }}:x' | awk -F ':' '{print $6}'"
   register: user_home_output
 
 - set_fact: env_file="{{ user_home_output.stdout }}/.bash_profile"
@@ -20,4 +20,4 @@
   - "export JAVA_HOME PATH"
 
 - name: "Source Java Profile"
-  shell: "source /root/.bash_profile"
+  shell: "source {{ env_file }}"
