[chore][deploy] grafana dashboard dingo_store and iostat

--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -24,4 +24,9 @@ default_dashboard_template: "dingo.json.j2"
 process_dashboard_title: "DingoProcess"
 process_dashboard_uid: "PCJkOyLVk"
 process_dashboard_template: "system-processes-metrics.json.j2"
-# default_dashboard_template: "system-processes-metrics.json.j2"
+dingo_store_dashboard_title: "DingoMerics"
+dingo_store_dashboard_uid: "xYgURYs4z"
+dingo_store_dashboard_template: "dingo_metrics.json.j2"
+iostat_dashboard_title: "DingoIostat"
+iostat_dashboard_uid: "9l09q0qik"
+iostat_dashboard_template: "node_iostat.json.j2"
