--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -82,15 +82,20 @@ grafana_server: "{{ groups['grafana'][0] }}"
 default_dashboard_uid: "RNezu0fWk"
 
 dingo_tmp_coordinator_list: "{{ groups['coordinator'] }}"
+dingo_tmp_store_list: "{{ groups['store'] }}"
 dingo_tmp_executor_list: "{{ groups['executor'] | default(\"\") }}"
 
 # define dingo coordinator http monitor port: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
-dingo_coordinator_http_monitor_port: 9201
+dingo_coordinator_http_monitor_port: 22001
+dingo_store_http_monitor_port: 20001
 dingo_executor_http_monitor_port: 9201
 
 # ['172.20.31.10:9201','172.20.31.11:9201','172.20.31.12:9201']
 dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_coordinator_http_monitor_port }}' {% endfor %}"
 dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
+
+dingo_store_http_tmp_list: "{% for item in dingo_tmp_store_list %} '{{item}}:{{ dingo_store_http_monitor_port }}' {% endfor %}"
+dingo_store_http_monitor_list: "[ {{ dingo_store_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
 
 dingo_executor_http_tmp_list: "{% for item in dingo_tmp_executor_list %} '{{item}}:{{ dingo_executor_http_monitor_port }}' {% endfor %}"
 dingo_executor_http_monitor_list: "[ {{ dingo_executor_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
