--- a/container/docker-compose/docker-compose.yml
+++ b/container/docker-compose/docker-compose.yml
@@ -1,99 +1,128 @@
 ---
 version: '2.2'
+
+x-shared-environment: &shared-env
+  SERVER_HOST: ${DINGO_HOST_IP}
+  RAFT_HOST: ${DINGO_HOST_IP}
+  COOR_RAFT_PEERS: ${DINGO_HOST_IP}:22101,${DINGO_HOST_IP}:22102,${DINGO_HOST_IP}:22103
+  COOR_SRV_PEERS: ${DINGO_HOST_IP}:22001,${DINGO_HOST_IP}:22002,${DINGO_HOST_IP}:22003
+
 services:
   coordinator1:
-    image: dingodb.ubuntu:v0.4.1
+    image: dingodatabase/dingo-store:latest
     hostname: coordinator1
     container_name: coordinator1
-    networks:
-      - dingo_net
+    network_mode: host
     environment:
-      DINGO_ROLE: coordinator
-      DINGO_HOSTNAME: coordinator1
+      FLAGS_role: coordinator
+      COORDINATOR_SERVER_START_PORT: 22001
+      COORDINATOR_RAFT_START_PORT: 22101
+      INSTANCE_START_ID: 1001
+      <<: *shared-env
 
   coordinator2:
-    image: dingodb.ubuntu:v0.4.1
+    image: dingodatabase/dingo-store:latest
     hostname: coordinator2
     container_name: coordinator2
-    networks:
-      - dingo_net
+    network_mode: host
     environment:
-      DINGO_ROLE: coordinator
-      DINGO_HOSTNAME: coordinator2
+      FLAGS_role: coordinator
+      COORDINATOR_SERVER_START_PORT: 22002
+      COORDINATOR_RAFT_START_PORT: 22102
+      INSTANCE_START_ID: 1002
+      <<: *shared-env
 
   coordinator3:
-    image: dingodb.ubuntu:v0.4.1
+    image: dingodatabase/dingo-store:latest
     hostname: coordinator3
     container_name: coordinator3
-    networks:
-      - dingo_net
+    network_mode: host
     environment:
-      DINGO_ROLE: coordinator
-      DINGO_HOSTNAME: coordinator3
+      FLAGS_role: coordinator
+      COORDINATOR_SERVER_START_PORT: 22003
+      COORDINATOR_RAFT_START_PORT: 22103
+      INSTANCE_START_ID: 1003
+      <<: *shared-env
 
-  executor1:
-    image: dingodb.ubuntu:v0.4.1
-    hostname: executor1
-    container_name: executor1
+  store1:
+    image: dingodatabase/dingo-store:latest
+    hostname: store1
+    container_name: store1
+    network_mode: host
+    depends_on:
+      - coordinator1
+      - coordinator2
+      - coordinator3
+    environment:
+      FLAGS_role: store
+      RAFT_START_PORT: 20101
+      SERVER_START_PORT: 20001
+      INSTANCE_START_ID: 1001
+      <<: *shared-env
+
+  store2:
+    image: dingodatabase/dingo-store:latest
+    hostname: store2
+    container_name: store2
+    network_mode: host
+    depends_on:
+      - coordinator1
+      - coordinator2
+      - coordinator3
+    environment:
+      FLAGS_role: store
+      RAFT_START_PORT: 20102
+      SERVER_START_PORT: 20002
+      INSTANCE_START_ID: 1002
+      <<: *shared-env
+
+  store3:
+    image: dingodatabase/dingo-store:latest
+    hostname: store3
+    container_name: store3
+    network_mode: host
+    depends_on:
+      - coordinator1
+      - coordinator2
+      - coordinator3
+    environment:
+      FLAGS_role: store
+      RAFT_START_PORT: 20103
+      SERVER_START_PORT: 20003
+      INSTANCE_START_ID: 1003
+      <<: *shared-env
+
+  mysql_init:
+    image: dingodatabase/dingo-store:latest
+    hostname: mysql_init
+    container_name: mysql_init
+    network_mode: host
+    depends_on:
+      - store1
+      - store2
+      - store3
+    environment:
+      SERVER_HOST: ${DINGO_HOST_IP}
+      COORDINATOR_SERVER_START_PORT: 22001
+      COOR_SRV_PEERS: ${DINGO_HOST_IP}:22001,${DINGO_HOST_IP}:22002,${DINGO_HOST_IP}:22003
+    entrypoint: [ "/bin/sh", "-c" ]
+    command: /opt/dingo-store/scripts/mysql_init.sh
+
+  executor:
+    image: dingodatabase/dingo:latest
+    hostname: executor
+    container_name: executor
     ports:
       - 8765:8765
+      - 3307:3307
     networks:
       - dingo_net
     depends_on:
-      - coordinator1
-      - coordinator2
-      - coordinator3
+      - mysql_init
     environment:
        DINGO_ROLE: executor
-       DINGO_HOSTNAME: executor1
-
-  executor2:
-    image: dingodb.ubuntu:v0.4.1
-    hostname: executor2
-    container_name: executor2
-    ports:
-      - 8766:8765
-    networks:
-      - dingo_net
-    depends_on:
-      - coordinator1
-      - coordinator2
-      - coordinator3
-    environment:
-       DINGO_ROLE: executor
-       DINGO_HOSTNAME: executor2
-
-  executor3:
-    image: dingodb.ubuntu:v0.4.1
-    hostname: executor3
-    container_name: executor3
-    ports:
-      - 8767:8765
-    networks:
-      - dingo_net
-    depends_on:
-      - coordinator1
-      - coordinator2
-      - coordinator3
-    environment:
-       DINGO_ROLE: executor
-       DINGO_HOSTNAME: executor3
- 
-  web:
-    image: dingodb.ubuntu:v0.4.1
-    hostname: web
-    container_name: web
-    ports:
-      - 13000:13000
-    networks:
-      - dingo_net
-    depends_on:
-      - coordinator1
-      - coordinator2
-      - coordinator3
-    environment:
-      DINGO_ROLE: web
-      DINGO_HOSTNAME: web
+       DINGO_HOSTNAME: executor
+       DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
 
 networks:
     dingo_net:
