[chore][deploy] Fix mysql_init

--- a/container/docker-compose/docker-compose.yml
+++ b/container/docker-compose/docker-compose.yml
@@ -105,6 +105,7 @@ services:
        DINGO_ROLE: executor
        DINGO_HOSTNAME: executor
        DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001,${DINGO_HOST_IP}:22002,${DINGO_HOST_IP}:22003
+       DINGO_MYSQL_COORDINATORS: ${DINGO_HOST_IP}:22001
 
 
 networks:
