--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -90,6 +90,9 @@ dingo_store_coordinator_exchange_port: 22001
 dingo_store_coordinator_raft_port: 22101
 dingo_store_exchange_port: 20001
 dingo_store_raft_port: 20101
+dingo_store_index_exchange_port: 21001
+dingo_store_index_raft_port: 21101
+
 
 # executer port
 dingo_coordinator_exchange_port: 22001
@@ -99,6 +102,7 @@ dingo_mysql_port: 3307
 # define dingo coordinator http monitor port: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
 dingo_coordinator_http_monitor_port: 22001
 dingo_store_http_monitor_port: 20001
+dingo_index_http_monitor_port: 21001
 dingo_executor_http_monitor_port: 9201
 
 # ['172.20.31.10:9201','172.20.31.11:9201','172.20.31.12:9201']
