--- a/roles/dingo/tasks/02_update_configuration.yml
+++ b/roles/dingo/tasks/02_update_configuration.yml
@@ -19,6 +19,14 @@
       dest: "{{ dingo_home }}/conf/logback-web.xml"
     }
     - {
+      src: "logback.xml.j2",
+      dest: "{{ dingo_home }}/conf/logback.xml"
+    }
+    - {
+      src: "client.xml.j2",
+      dest: "{{ dingo_home }}/conf/client.xml"
+    }
+    - {
       src: "start-executor.sh.j2",
       dest: "{{ dingo_home }}/bin/start-executor.sh"
     }
@@ -46,5 +54,4 @@
 - name: "Remove unused configure files"
   file: path="{{ item }}" state=absent
   with_items:
-    - "{{ dingo_home }}/conf/logback.xml"
     - "{{ dingo_home }}/conf/config.yaml"
