--- a/container/docker-compose/docker-compose.single.yml
+++ b/container/docker-compose/docker-compose.single.yml
@@ -63,18 +63,18 @@ services:
        DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
        DINGO_MYSQL_COORDINATORS: ${DINGO_HOST_IP}:22001
    
-  web:
+  proxy:
     image: dingodatabase/dingo:latest
-    hostname: web
-    container_name: web
+    hostname: proxy
+    container_name: proxy
     ports:
       - 13000:13000
       - 9999:9999
     networks:
       - dingo_net
     environment:
-      DINGO_ROLE: web
-      DINGO_HOSTNAME: web
+      DINGO_ROLE: proxy
+      DINGO_HOSTNAME: proxy
       DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
 
 networks:
