--- a/roles/check_ports/tasks/main.yml
+++ b/roles/check_ports/tasks/main.yml
@@ -6,15 +6,14 @@
   template:
     src: templates/check_port.sh.j2
     dest: "{{ script_file_path }}"
-  run_once: true
 
 - name: run the script of check_ports
   shell: |
-    bash /tmp/.check_ports.sh && \
-    rm -f  /tmp/.check_ports.sh
+    bash /tmp/check_ports.sh && \
+    rm -f  /tmp/check_ports.sh
   register: check_ports_result
 
 - name: summary check ports conflicts result
   debug:
     msg: "{{ check_ports_result.stdout_lines }}"
-  failed_when: check_ports_result.stdout_lines|length > 1
+  failed_when: check_ports_result.stdout_lines|join(',')|regex_search('Conflicts')
