--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -119,6 +119,9 @@ dingo_executor_http_monitor_port: 9201
 dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_coordinator_http_monitor_port }}' {% endfor %}"
 dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
 
+dingo_coordinator_exchange_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_store_coordinator_exchange_port }}' {% endfor %}"
+dingo_coordinator_exchange_tmp_list_string: "[ {{ dingo_coordinator_exchange_tmp_list.split() | join(\",\") | default(\"\") }} ]"
+
 dingo_store_http_tmp_list: "{% for item in dingo_tmp_store_list %} '{{item}}:{{ dingo_store_http_monitor_port }}' {% endfor %}"
 dingo_store_http_monitor_list: "[ {{ dingo_store_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
 
