--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -101,7 +101,7 @@ dingo_store_index_raft_port: 21101
 
 
 # executer port
-dingo_coordinator_exchange_port: 22001
+dingo_coordinator_exchange_port: "{{ dingo_store_coordinator_exchange_port }}"
 dingo_executor_exchange_port: 8765
 dingo_mysql_port: 3307
 
@@ -110,14 +110,17 @@ dingo_proxy_http_port: 13000
 dingo_proxy_grpc_port: 9999
 
 # define dingo coordinator http monitor port: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
-dingo_coordinator_http_monitor_port: 22001
-dingo_store_http_monitor_port: 20001
-dingo_index_http_monitor_port: 21001
+dingo_coordinator_http_monitor_port: "{{ dingo_store_coordinator_exchange_port }}"
+dingo_store_http_monitor_port: "{{ dingo_store_exchange_port }}"
+dingo_index_http_monitor_port: "{{ dingo_store_index_exchange_port }}"
 dingo_executor_http_monitor_port: 9201
 
 # ['172.20.31.10:9201','172.20.31.11:9201','172.20.31.12:9201']
 dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_coordinator_http_monitor_port }}' {% endfor %}"
 dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
+
+dingo_coordinator_exchange_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_store_coordinator_exchange_port }}' {% endfor %}"
+dingo_coordinator_exchange_tmp_list_string: " {{ dingo_coordinator_exchange_tmp_list.split() | join(\",\") | default(\"\") }} "
 
 dingo_store_http_tmp_list: "{% for item in dingo_tmp_store_list %} '{{item}}:{{ dingo_store_http_monitor_port }}' {% endfor %}"
 dingo_store_http_monitor_list: "[ {{ dingo_store_http_tmp_list.split() | join(\",\") | default(\"\") }} ]"
