--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -24,13 +24,13 @@ install_system_fileLimits: true
 set_core_file: false
 core_file_dir: /home/corefiles
 
+optimize_memory_switch: true
 #-----------------------------------------------------
 # 2. Install Java SDK
 #-----------------------------------------------------
 install_java_sdk: true
 jdk_install_path: /opt
 jdk_home: "{{ jdk_install_path }}/jdk"
-
 #-----------------------------------------------------
 # 2_1. Check For Port Conflicts
 #-----------------------------------------------------
